# benlang

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benlang/: Cargo.toml
benlang-cfg/: Cargo.toml
benlang-cfg/src/: basic_block.rs  ir.rs  lib.rs  min_ssa.rs  optimize.rs  phi.rs  ssa.rs
benlang-mem/: Cargo.toml
benlang-mem/src/: lib.rs
benlang-parser/: Cargo.toml
benlang-parser/src/: expr.rs  expr_parser.rs  lib.rs  object.rs  scanner.rs  stmt.rs  stmt_parser.rs  value.rs
benlang/benches/: criterion_bench.rs
benlang/src/: main.rs
cfg/: Cargo.toml
cfg/src/: basic_block.rs  ir.rs  lib.rs  min_ssa.rs  optimize.rs  phi.rs  ssa.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen1/: Cargo.toml
codegen1/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
examples/: fib  fizzbuzz
parser/: Cargo.toml
parser/src/: expr.rs  expr_parser.rs  lib.rs  object.rs  scanner.rs  stmt.rs  stmt_parser.rs  value.rs
vm/: Cargo.toml
vm/src/: lib.rs
