[package]
name = "benlang"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
cfg = { path = "../cfg" }
codegen = { path = "../compiler" }
vm = { path = "../vm" }
anyhow = "1.0.97"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "criterion_bench"

[profile.release]
opt-level = 0
debug = true
strip = false

[profile.bench]
opt-level = 0
debug = true
strip = false
