[package]
name = "benlang"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
cfg = { path = "../cfg" }
codegen = { path = "../compiler" }
vm = { path = "../vm" }
anyhow = "1.0.97"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
harness = false
name = "criterion_bench"

[profile.release]
debug = true
strip = false

[profile.bench]
debug = true
strip = false
