[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
cfg = { path = "../cfg" }
compiler = { path = "../compiler" }
slotmap = "1.0.7"
anyhow = "1.0.98"


[features]
vm_debug = []

[profile.release]
opt-level = 0
debug = true
strip = false

[profile.bench]
opt-level = 0
debug = true
strip = false
